--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ p {
 	background-color: transparent;
 	border: 0;
     padding: 20px;
+    text-align: center;
 }
 
 .navbar-default.nav-colored {
@@ -32,7 +33,7 @@ p {
     font-size: 22px;
 }
 .navbar-default .navbar-nav>li>a {
-    color: #fff;
+    color: #333333;
     font-size: 20px;
 }
 
