--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ p {
     font-size: 22px;
 }
 .navbar-default .navbar-nav>li>a {
-    color: #333333;
+    color: white;
     font-size: 20px;
 }
 
