--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p {
     margin: 30px 0 30px 0;
     font-size: 1.5em;
 }
-/*-------------------------- NAVBAR ----------------------- */
+/*-------------------------- NAVBAR --------------------------- */
 .navbar-default {
 	transition: all 0.4s;
 	background-color: transparent;
@@ -27,6 +27,7 @@ p {
 
 .navbar-default.nav-colored {
 	background-color: rgba(29, 87, 102, 0.76);
+    padding: 11px;
 }
 .navbar-header .navbar-brand {
     color: white;
@@ -39,13 +40,12 @@ p {
 }
 
 .fa-laptop {
-    font-size: 60px;
+    font-size: 70px;
+    top: 0px;
     position: absolute;
-    top: 4px;
-    width: 68px;
 }
 
-/*-------------------------- HEADER ----------------------- */
+/*-------------------------- HEADER -------------------------- */
 header {
 	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4)), url('../img/laptop.jpg');
 	background-size: cover;
@@ -71,7 +71,7 @@ header h1 {
 .btn-info {
     font-size: 20px;
 }
-/*------------------------ SERVICES ------------------------ */
+/*------------------------ SERVICES -------------------------- */
 #services {
 	text-align: center;
 }
