--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,11 @@ p {
     top: 0px;
     position: absolute;
 }
-
+.logoIcon {
+    width: 50px;
+    top: 10px;
+    position: absolute;
+}
 /*-------------------------- HEADER -------------------------- */
 header {
 	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4)), url('../img/laptop.jpg');
@@ -70,6 +74,9 @@ header h1 {
 
 .btn-info {
     font-size: 20px;
+    border-radius: 40px;
+    FONT-WEIGHT: BOLD;
+    padding: 6px 30px;
 }
 /*------------------------ SERVICES -------------------------- */
 #services {
