--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,24 @@ p {
 	transition: all 0.4s;
 	background-color: transparent;
 	border: 0;
-    padding: 1px 20px 0 20px;
+/*    padding: 1px 20px 0 20px;*/
     text-align: center;
+    padding: 11px;
 }
 
 .navbar-default.nav-colored {
-	background-color: rgba(29, 87, 102, 0.76);
+	background-color: rgb(3, 35, 49);
     padding: 11px;
 }
 .navbar-header .navbar-brand {
     color: white;
     font-size: 22px;
+    background-image: url(../img/world-wide-web.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 55px;
+    height: 55px;
 
 }
 .navbar-default .navbar-nav>li>a {
@@ -51,7 +58,7 @@ p {
 }
 /*-------------------------- HEADER -------------------------- */
 header {
-	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4)), url('../img/laptop.jpg');
+	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4)), url('../img/header.png');
 	background-size: cover;
 	height: 100vh;
 	position: relative;
@@ -68,7 +75,7 @@ header .inner {
 header h1 {
     margin-bottom: 40px;
     font-size: 6em;
-    font-family: 'Great Vibes' , cursive;
+    font-family: 'Ubuntu' , cursive;
     font-weight: bold;
 }
 
@@ -77,6 +84,15 @@ header h1 {
     border-radius: 40px;
     FONT-WEIGHT: BOLD;
     padding: 6px 30px;
+    background-color: #051b42;
+    border-color: #051b42;
+    margin-top: 60px;
+}
+.btn-info:hover {
+      color: #051b42;
+    background-color: #fff;
+    border-color: #fff;
+    
 }
 /*------------------------ SERVICES -------------------------- */
 #services {
