--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ section {
 }
 h2 {
     margin: 30px 0 30px 0;
-    font-size: 4em;
+    font-size: 2em;
 }
 h3 {
     font-size: 2em;
@@ -70,11 +70,12 @@ header .inner {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: #FFFFFF;
+    width: 100%;
 }
 
 header h1 {
     margin-bottom: 40px;
-    font-size: 6em;
+    font-size: 4em;
     font-family: 'Ubuntu' , cursive;
     font-weight: bold;
 }
@@ -275,31 +276,22 @@ header h1 {
     background-color: #FFFFFF;
     color: #1d5766;
 }
-
-/*----------------------- FOOTER ------------------------------ */
-footer {
-    padding: 30px 0;
-    line-height: 50px;
-    background-color: rgb(4, 14, 16);
-    color: white;
-}
-
-footer p {
+#contact p {
     margin: 0;
 }
 
-footer nav ul li {
+#contact nav ul li {
     display: inline-block;
     margin-right: 10px;
 }
 
-footer nav ul li a {
+#contact nav ul li a {
     color: white;
     text-decoration: none;
     transition: all .3s;
 }
 
-footer .social a {
+#contact .social a {
     display: inline-block;
 	height: 80px;
 	width: 80px;
@@ -310,11 +302,20 @@ footer .social a {
 	margin: 0 5px;
     padding: 20px;
 }
-footer .social a:hover {
+#contact .social a:hover {
     background-color: rgb(8, 29, 33);
 }
 
-footer .social a .fa {
+#contact .social a .fa {
     font-size: 2.5em;
     color: #FFFFFF;
 }
+
+/*----------------------- FOOTER ------------------------------ */
+footer {
+    padding: 30px 0;
+    line-height: 50px;
+    background-color: rgb(4, 14, 16);
+    color: white;
+}
+
