--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ p {
 	border: 0;
 /*    padding: 1px 20px 0 20px;*/
     text-align: center;
-    padding: 11px;
+    padding: 20px;
 }
 
 .navbar-default.nav-colored {
@@ -32,8 +32,9 @@ p {
 }
 .navbar-header .navbar-brand {
     color: white;
-    font-size: 22px;
-    background-image: url(../img/world-wide-web.svg);
+    font-size: 4em;
+/*    background-image: url(../img/world-wide-web.svg);*/
+    font-family: 'Anton', sans-serif;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
