--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,15 @@ p {
     height: 55px;
 
 }
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
+    color: #c3c3c3;
+}
 .navbar-default .navbar-nav>li>a {
     color: white;
     font-size: 20px;
+}
+.navbar-default .navbar-nav>li>a:hover {
+    color: #c3c3c3;
 }
 
 .fa-laptop {
