--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,20 @@ header h2 {
 	font-size: 1em;
     margin: 10px; 
 }
-
+.img-wrapper {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.img-wrapper img {
+    max-width: 100%;
+}
 /*-------------------------- CONTACT ----------------------------- */
 #contact {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url('../img/mapa.jpg');
